--- a/app/globals.css
+++ b/app/globals.css
@@ -143,4 +143,8 @@
   .btn-animate {
     @apply transition-all duration-300 ease-in-out active:scale-95;
   }
+
+  .active {
+    @apply text-blue-600 underline underline-offset-4 decoration-1;
+  }
 }
